--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,237 @@
-body {
+*,
+::before,
+::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  --Questions-Font-Style: "Karla", sans-serif;
+  --Answers-Font-Style: "Karla", sans-serif;
+  --Nice-Pink: rgb(255, 0, 102);
+  --Nice-blue: rgba(0, 153, 255, 1);
+}
+
+body {
+  min-width: 100vw;
+  min-height: 100vh;
+  background-color: #8ec5fc;
+  background-image: linear-gradient(62deg, #8ec5fc 0%, #e0c3fc 100%);
+  font-family: var(--Answers-Font-Style);
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  /* background: url("F:\Code\React Quiz App\my-quiz-app\public\Images\Blobs and waves/wave.svg"),
+    url("F:\Code\React Quiz App\my-quiz-app\public\Images\Blobs and waves/wave(1).svg");
+  background-repeat: no-repeat;
+  background-position: bottom, top; */
+}
+
+/* app.css */
+#root {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+}
+
+.App {
+  width: 90%;
+  max-width: 550px;
+  /* min-height: 100vh; */
+  /* border: 1px solid white; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  /* background-color: #f5f7fb; */
+  color: #293264;
+
+  background: url("F:\Code\React Quiz App\my-quiz-app\public\Images/first-page-blob-top.png"),
+    url("F:\Code\React Quiz App\my-quiz-app\public\Images/first-page-blob-5-bottom.png"),
+    #f5f7fb;
+  background-repeat: no-repeat;
+  background-position: top right, bottom left;
+  border-radius: 10px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px,
+    rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  margin: 1rem auto;
+}
+
+.App.first-page-app {
+  height: 500px;
+}
+
+.App.second-page {
+  min-height: 500px;
+}
+
+.check-answers {
+  border: none;
+  height: 35px;
+  width: 120px;
+  left: 215px;
+  top: 490px;
+  border-radius: 10px;
+
+  background: #4d5b9e;
+
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 600;
+  line-height: 12px;
+  letter-spacing: 0em;
+  text-align: center;
+
+  color: #f5f7fb;
+}
+
+/* Question Page  */
+.question-page-container {
+  margin: 1rem 0;
+  /* border: 1px solid red; */
+  width: 80%;
+  /* height: 100%; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  /* text-align: left; */
+}
+
+/* Question */
+.qa {
+  width: 100%;
+
+  margin: 0.5rem auto;
+  border-bottom: 1px solid black;
+}
+.qa--question {
+  font-family: Karla;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: left;
+}
+
+/* answers */
+.qa--answers {
+  margin-block: 0.5rem 1rem;
+  display: flex;
+  gap: 1rem;
+  /* align-items: center; */
+  /* justify-content: center; */
+}
+.qa--answer-button {
+  min-height: 21px;
+  min-width: 66px;
+  /* left: 310px;
+  top: 70px; */
+  border-radius: 8px;
+
+  border: 0.79px solid #4d5b9e;
+
+  font-family: Inter;
+  font-size: 10px;
+  font-weight: 500;
+  line-height: 12px;
+  letter-spacing: 0em;
+  text-align: center;
+
+  color: #293264;
+
+  background-color: transparent;
+}
+
+.qa--answer-button:hover {
+  background: #d6dbf5;
+  border: none;
+}
+
+.selected {
+  background: #d6dbf5;
+  border: none;
+}
+
+.correct {
+  background: #94d7a2;
+  border: none;
+}
+
+.wrong {
+  background: #f8bcbc;
+  border: none;
+}
+
+/* first page */
+.first-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.first-page-title {
+  font-family: Karla;
+  font-size: 31px;
+  font-weight: 700;
+  line-height: 37px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.first-page--description {
+  /* border: 1px solid red; */
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.btn {
+  /* button styles */
+  height: 52px;
+  width: 193px;
+  left: 179px;
+  top: 314px;
+  border-radius: 15px;
+  border: none;
+  margin-block: 1rem;
+
+  background: #4d5b9e;
+
+  /* text styles */
+  font-family: Inter;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 19px;
+  letter-spacing: 0em;
+  text-align: center;
+  /* text-color: */
+  color: #f5f7fb;
+}
+
+.first-page--button {
+}
+
+.second-page--button {
+  /* position: relative; */
+  padding: 0.4rem 1rem;
+  height: auto;
+  width: auto;
+  margin-left: auto;
+  margin-right: 1rem;
+  font-size: 0.8rem;
+  /* position: absolute; */
+  /* top: 0;
+  left: 0; */
+}
+
+.first-page--button:hover {
 }
